[package]
name = "voice_to_text"
version = "0.1.0"
edition = "2021"

[dependencies]
hound = "3.4"
cpal = "0.14"
rodio = "0.15"
ratatui = "0.28.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json",  "blocking", "native-tls" ] }# "tls",
directories = "4.0"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
crossterm = {version="0.26", features=["event-stream"]}
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
crossbeam-channel = "0.5.13"
tracing-error = "0.2.0"
itertools = "0.13.0"
rubato = "0.16.0"
tokio = { version = "1.41.0", features = ["full"] }
futures = "0.3.31"
